fixed text align in footer quote.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,3 +71,7 @@ body.homepage {
 .footer_logo{
     width: 45%;
 }
+
+.page-footer p {
+    text-align: justify;
+}
